<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:key="data"
            android:title="@string/intent_title_data"
            android:summary="" />
    <Preference android:key="mimeType"
            android:title="@string/intent_title_mime_type"
            android:summary="" />
    <Preference android:key="action"
            android:title="@string/intent_title_action"
            android:summary="" />
    <Preference android:key="categories"
            android:title="@string/intent_title_categories"
            android:summary="" />
    <Preference android:key="extras"
            android:title="@string/intent_title_extras"
            android:summary="" />
    <Preference android:key="flags"
            android:title="@string/intent_title_flags"
            android:summary="" />
    <Preference android:key="component"
            android:title="@string/intent_title_component"
            android:summary="" />
</PreferenceScreen>
